Fix books in row on tablet

--- a/src/WebClientApp/src/components/BooksBlock/BooksBlock.module.scss
+++ b/src/WebClientApp/src/components/BooksBlock/BooksBlock.module.scss
@@ -34,6 +34,6 @@
   }
   .list {
     gap: 16px;
-    grid-template-columns: repeat(auto-fill, minmax(100%, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
   }
 }
